# transg

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  flake.nix  rustfmt.toml
examples/: gen_gobject.rs  hello.rs  test_libtorrent.rs  test_libtorrent2.rs  test_transmission.rs  tree.rs
src/: command_processor.rs  config.rs  create_torrent_dialog.rs  file_model.rs  file_table.rs  folder_model.rs  left_filter_model.rs  lib.rs  magnet_open.rs  magnet_tools.rs  main.rs  notification_utils.rs  objects.rs  peer_model.rs  preferences_window.rs  stats_model.rs  status_model.rs  torrent_details_grid.rs  torrent_details_model.rs  torrent_list_model.rs  torrent_stats.rs  tracker_model.rs  tracker_stats_model.rs  transmission.rs  transmission_client.rs  utils.rs
src/objects/: blocks_widget.rs  category.rs  file.rs  file_stats.rs  folder.rs  peer.rs  stats.rs  status.rs  torrent_details.rs  tracker.rs
src/resources/: resources.gresource.xml  torrent_detail.ui  torrent_detail.ui~  torrent_list_context_menu.ui  ui.css
