[package]
name = "transg"
version = "0.0.1"
edition = "2021"

include = [
  "examples/*.rs",
  "src/*.rs"
]

[[bin]]
name = "transg"
path = "src/main.rs"



[dependencies]
gtk = { version = "0.4.7", package = "gtk4", features = ["v4_4"]}
once_cell = "1.5"
transmission-rpc = { path = "../transmission-rpc" }
#transmission-rpc = "0.3.6"
tokio = { version = "1.18.0", features = ["full"]}
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"



[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"
