[package]
name = "transg"
version = "0.0.1"
edition = "2021"

include = [
  "examples/*.rs",
  "src/*.rs"
]

[[bin]]
name = "transgression"
path = "src/main.rs"

[[bin]]
name = "transgression-open-magnet"
path = "src/magnet_open.rs"

[profile.dev]
debug = false

[dependencies]
gtk = { version = "0.4.7", package = "gtk4", features = ["v4_4"]}
once_cell = "1.5"
tokio = { version = "1.18.0", features = ["full"]}
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.2"
lazy_static = "1.4.0"
async-std = "1.11"
libtorrent-sys = { path = "./libtorrent-sys" } # need to use patched version for now
base64 = "0.13.0"
lava_torrent = "0.7.0"
tempdir = "*"
magnet-url = "2.0.0"
urlencoding = "2.1.0"
zbus = "2.2.0"
home = "0.5.3"
bit-vec = "0.6.3"
#adw = {package = "libadwaita", version = "0.2.0-alpha.1", features = ["v1_1"]}
procfs = "0.13.0"
#transmission = "0.3.1"

[build-dependencies]
gtk = { version = "0.4.7", package = "gtk4" }



[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"
